<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:id="@+id/search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:title="@string/add_title"
        android:icon="@drawable/ic_add"
        android:id="@+id/add_title"
        app:showAsAction="always" />

    <item
        android:title="@string/subscribe_to_topic"
        android:icon="@drawable/ic_subscribe"
        android:id="@+id/subscribe"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/unsubscribe_to_topic"
        android:icon="@drawable/ic_unsubscribe"
        android:id="@+id/unsubscribe"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/publish_a_note"
        android:icon="@drawable/ic_publish"
        android:id="@+id/publish"
        app:showAsAction="ifRoom" />

</menu>